--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 		<header>
 			<div class="row header-yoann">
 				<ul class="nav nav-pills col-md-4 col-md-offset-4">
-					<li ><a href="#">Concours</a></li>
-					<li ><a href="#">Galeries</a></li>
+					<li ><a href="views/contest.html">Concours</a></li>
 					<li ><a href="#">Inscription</a></li>
 				</ul>
+				<form action="" class="navbar-form navbar-left" role="Search">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Search">
+					</div>
+					<button class="btn btn-default">Submit</button>
+				</form>
 			</div>
 		</header>
 
